# airplane_controller

./: .gitignore  CMakeLists.txt  ControllerUi.qml  Main.qml  readme.md  resources_rc.py
brain/: main.py  test_socket.py
controller/: CMakeLists.txt  resources.qrc
controller/srcs/: Battery.qml  ColorImage.qml  ControllerUi.qml  DirectionControl.qml  control.cpp  control.h  main.cpp  socketcommu.cpp  tbluetooth.cpp  tbluetooth.h  tprocotol.cpp  tprocotol.h
scripts/: devsocket.py
srcs/: ArrowButton.qml  ControllerUi.qml  DirectionControl.qml  main.cpp  socketcommu.cpp  socketcommu.h
uav/: buffer.h  commu.cpp  commu.h  uav.ino  vector.cpp  vector.h
